--- a/index.html
+++ b/index.html
@@ -1276,27 +1276,18 @@ background-image: url(/agenda/cos.png);
 </center>
 
 
+
+
+
+
+
 <li class="FUT"><a href="#">
-Amistosos: Bayer Leverkusen vs. Pisa
-<span class="t">17:00</span></a>
+Amistosos: 	Real Betis vs. Como
+<span class="t">19:30</span></a>
 <ul>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espnmx" target="_blank">ESPN 1 MX<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="PE"><a href="#">
-Liga 1: Alianza Universidad vs. Universitario
-<span class="t">18:00</span></a>
-<ul>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=liga1max" target="_blank">L1MAX<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="ENG"><a href="#">
-Copa de la Liga Inglesa: Accrington Stanley vs. Oldham Athletic
-<span class="t">19:45</span></a>
-<ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTI=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espn2mx" target="_blank">ESPN 2 MX<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/en-vivo/espn-deportes/" target="_blank">ESPN Deportes<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Disney+<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1311,150 +1302,182 @@ División Profesional : San Antonio B.B. vs. Bolívar
 </li>
 
 
-
 <li class="PE"><a href="#">
-Liga 1: Melgar vs. Juan Pablo II College
+Liga 1: Atlético Grau vs. Deportivo Garcilaso
 <span class="t">21:00</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/liga1max/" target="_blank">L1MAX<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=liga1max" target="_blank">L1MAX<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="MLB"><a href="#">
+MLB: Los Angeles Dodgers vs. St. Louis Cardinals
+<span class="t">21:00</span></a>
+<ul>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espn5" target="_blank">ESPN 5<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=foxsports2" target="_blank">FOX Sports 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
 <li class="COL"><a href="#">
-Copa Colombia: Cúcuta Deportivo vs. Atlético Nacional
-<span class="t">22:00</span></a>
+Copa Colombia: Tigres vs. América de Cali
+<span class="t">23:00</span></a>
 <ul>
 <li class="subitem1"><a href="/en-vivo/win-sports-premium/" target="_blank">Win+ Fútbol<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
-<li class="PY"><a href="#">
-Primera División: Atlético Tembetary vs. General Caballero JLM
-<span class="t">22:30</span></a>
+<li class="BRA"><a href="#">
+Copa do Brasil: Atlético Mineiro vs. Flamengo
+<span class="t">23:00</span></a>
 <ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWV2ZW50b3M5" target="_blank">Tigo Sports PY<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=premiere1" target="_blank">Premiere 1 BR<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="BRA"><a href="#">
+Copa do Brasil: RB Bragantino vs. Botafogo
+<span class="t">23:00</span></a>
+<ul>
+<li class="subitem1"><a href="" target="_blank">Premiere 2 BR<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
 <li class="TE"><a href="#">
-ATP National Bank Open 2025: Cuartos de Final
+WTA National Bank Open 2025: Semifinales
 <span class="t">00:00</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/espn-2/" target="_blank">ESPN 2<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTY=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="MLB"><a href="#">
-MLB: New York Mets vs. Cleveland Guardians
-<span class="t">00:00</span></a>
-<ul>
-<li class="subitem1"><a href="/en-vivo/espn-5/" target="_blank">ESPN 5<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/fox-sports-3/" target="_blank">FOX Sports 3<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTg=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="LC"><a href="#">
-Leagues Cup: Toluca vs. New York City
-<span class="t">00:30</span></a>
-<ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzLnBocA==" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="LC"><a href="#">
-Leagues Cup: Columbus Crew vs. León
-<span class="t">00:30</span></a>
-<ul>
-<li class="subitem1"><a href="/en-vivo/tudn/" target="_blank">TUDN<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/fs1/" target="_blank">FS1 USA<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="LC"><a href="#">
-Leagues Cup: CF Montréal vs. Puebla
-<span class="t">01:00</span></a>
-<ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9sYTE0aGQuY29tL3Zpdm8vY2FuYWxlcy5waHA/c3RyZWFtPWF6dGVjYTc=" target="_blank">Azteca 7 MX<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzMi5waHA=" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="CONCACAF"><a href="#">
-Copa Centroamericana: Verdes FC vs. Deportivo Saprissa
-<span class="t">01:06</span></a>
-<ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTM=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="AR"><a href="#">
-Primera Nacional: Quilmes vs. Atlanta
-<span class="t">01:10</span></a>
-<ul>
-<li class="subitem1"><a href="/en-vivo/tyc-sports/" target="_blank">TyC Sports<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="LC"><a href="#">
-Leagues Cup: Houston Dynamo vs. Pachuca
-<span class="t">01:30</span></a>
-<ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzMy5waHA=" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/en-vivo/espn-4-mx/" target="_blank">ESPN 4 MX<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
 <li class="PE"><a href="#">
-Liga 1: Alianza Lima vs. Sporting Cristal
-<span class="t">02:00</span></a>
+Liga 1: Binacional vs. Alianza Atlético
+<span class="t">23:30</span></a>
 <ul>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=liga1max" target="_blank">L1MAX<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
 <li class="LC"><a href="#">
-Leagues Cup: Mazatlán vs. San Diego
-<span class="t">03:00</span></a>
+Leagues Cup: Orlando City SC vs. Necaxa
+<span class="t">00:00</span></a>
 <ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzLnBocA==" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzMi5waHA=" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="TE"><a href="#">
+ATP National Bank Open 2025: Semifinales
+<span class="t">00:00</span></a>
+<ul>
+<li class="subitem1"><a href="/en-vivo/espn-2/" target="_blank">ESPN 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTk=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="LC"><a href="#">
+Leagues Cup: Inter Miami vs. Pumas UNAM
+<span class="t">00:30</span></a>
+<ul>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPW1sczFlcw==" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzLnBocA==" target="_blank">MLS Pass 2<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="LC"><a href="#">
+Leagues Cup: Atlanta United vs. Atlas
+<span class="t">00:30</span></a>
+<ul>
+<li class="subitem1"><a href="/en-vivo/tudn/" target="_blank">TUDN<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
 <li class="CONCACAF"><a href="#">
-Copa Centroamericana: Antigua GFC vs. Alianza
+Copa Centroamericana: Diriangén vs. Herediano
+<span class="t">01:00</span></a>
+<ul>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTI=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="LC"><a href="#">
+Leagues Cup: Minnesota United vs. Atlético San Luis
+<span class="t">01:30</span></a>
+<ul>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzMy5waHA=" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="COL"><a href="#">
+Copa Colombia: Atlético Huila vs. Junior
+<span class="t">01:30</span></a>
+<ul>
+<li class="subitem1"><a href="/en-vivo/win-sports-premium/" target="_blank">Win+ Fútbol<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="BRA"><a href="#">
+Copa do Brasil: Palmeiras vs. Corinthians
+<span class="t">01:30</span></a>
+<ul>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPXByZW1pZXJlMQ==" target="_blank">Premiere 1 BR<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="BRA"><a href="#">
+Copa do Brasil: Fluminense vs. Internacional
+<span class="t">01:30</span></a>
+<ul>
+<li class="subitem1"><a href="" target="_blank">Premiere 2 BR<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="LC"><a href="#">
+Leagues Cup: América vs. Portland Timbers
+<span class="t">02:30</span></a>
+<ul>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWV2ZW50b3Mx" target="_blank">TUDN MX<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzNC5waHA=" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="LC"><a href="#">
+Leagues Cup: Real Salt Lake vs. Querétaro
+<span class="t">02:30</span></a>
+<ul>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzMi5waHA=" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="MLB"><a href="#">
+MLB: San Diego Padres vs. Arizona Diamondbacks
+<span class="t">02:30</span></a>
+<ul>
+<li class="subitem1"><a href="/en-vivo/espn-mx/" target="_blank">ESPN 1 MX<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTc=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="CONCACAF"><a href="#">
+Copa Centroamericana: Hércules vs. Olimpia
+<span class="t">03:00</span></a>
+<ul>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTM=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="CONCACAF"><a href="#">
+Copa Centroamericana: Xelajú vs. Águila
 <span class="t">03:00</span></a>
 <ul>
 <li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTQ=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
-<li class="CONCACAF"><a href="#">
-Copa Centroamericana: Motagua vs. Independiente
-<span class="t">03:00</span></a>
-<ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTU=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
-</ul>
-</li>
 
-<li class="MLB"><a href="#">
-MLB: St. Louis Cardinals vs. Los Angeles Dodgers
-<span class="t">03:00</span></a>
-<ul>
-<li class="subitem1"><a href="/en-vivo/espn-3/" target="_blank">ESPN 3<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/espn-mx/" target="_blank">ESPN 1 MX<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTc=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
-</ul>
-</li>
 
-<li class="LC"><a href="#">
-Leagues Cup: Tigres UANL vs. Los Angeles FC
-<span class="t">03:30</span></a>
-<ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9sYTE0aGQuY29tL3Zpdm8vY2FuYWxlcy5waHA/c3RyZWFtPWF6dGVjYTc=" target="_blank">Azteca 7 MX<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzMi5waHA=" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
-</ul>
-</li>
 
 </ul>
 
