--- a/index.html
+++ b/index.html
@@ -1358,10 +1358,10 @@ Copa do Paulista : Botafogo-SP B – Comercial RP
 
 <li class="TE"><a href="#">
 WTA National Bank Open 2025: Semifinales
-<span class="t">00:00</span></a>
+<span class="t">23:00</span></a>
 <ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTg=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/espn-4-mx/" target="_blank">ESPN 4 MX<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney8" target="_blank">Disney+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espn4mx" target="_blank">ESPN 4 MX<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1385,8 +1385,8 @@ Leagues Cup: Orlando City SC vs. Necaxa
 ATP National Bank Open 2025: Semifinales
 <span class="t">00:00</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/espn-2/" target="_blank">ESPN 2<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTk=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espn2" target="_blank">ESPN 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney9" target="_blank">Disney+<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
