--- a/index.html
+++ b/index.html
@@ -1394,8 +1394,8 @@ ATP National Bank Open 2025: Semifinales
 Leagues Cup: Inter Miami vs. Pumas UNAM
 <span class="t">00:30</span></a>
 <ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPW1sczFlcw==" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzLnBocA==" target="_blank">MLS Pass 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899c84847a85959d8b98858a7c.html" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899c84847a85959d8a98858a7b.html" target="_blank">MLS Pass 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1403,7 +1403,9 @@ Leagues Cup: Inter Miami vs. Pumas UNAM
 Leagues Cup: Atlanta United vs. Atlas
 <span class="t">00:30</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/tudn/" target="_blank">TUDN<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899c84847a85959d8998858a7a.html" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899c84847a85959d8898858983.html" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
+
 </ul>
 </li>
 
@@ -1411,7 +1413,7 @@ Leagues Cup: Atlanta United vs. Atlas
 Copa Centroamericana: Diriangén vs. Herediano
 <span class="t">01:00</span></a>
 <ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTI=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTI=" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
