--- a/index.html
+++ b/index.html
@@ -1394,8 +1394,10 @@ ATP National Bank Open 2025: Semifinales
 Leagues Cup: Inter Miami vs. Pumas UNAM
 <span class="t">00:30</span></a>
 <ul>
-<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899c84847a85959d8b98858a7c.html" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899c84847a85959d8a98858a7b.html" target="_blank">MLS Pass 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899c84847a85959d8b98858a7c.html" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899c84847a85959d8a98858a7b.html" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=mls1es" target="_blank">MLS Pass <span>Calidad 720p</span></a></li>
+
 </ul>
 </li>
 
