--- a/index.html
+++ b/index.html
@@ -1415,15 +1415,20 @@ Leagues Cup: Atlanta United vs. Atlas
 Copa Centroamericana: Diriangén vs. Herediano
 <span class="t">01:00</span></a>
 <ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTI=" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899d8c847a85959d9098858a81.html" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899d8c847a85959e8798858a82.html" target="_blank">Deportes On + 2<span>Calidad 720p</span></a></li>
+
 </ul>
 </li>
+
+
 
 <li class="LC"><a href="#">
 Leagues Cup: Minnesota United vs. Atlético San Luis
 <span class="t">01:30</span></a>
 <ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzMy5waHA=" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899f8a847a85959e8f98858b7f.html" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899f8a847a85959e9098858b80.html" target="_blank">Deportes On + 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1431,15 +1436,16 @@ Leagues Cup: Minnesota United vs. Atlético San Luis
 Copa Colombia: Atlético Huila vs. Junior
 <span class="t">01:30</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/win-sports-premium/" target="_blank">Win+ Fútbol<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899f8a847a85959e8c98858b7c.html" target="_blank">Win+ Fútbol<span>Calidad 720p</span></a></li>
 </ul>
 </li>
+
 
 <li class="BRA"><a href="#">
 Copa do Brasil: Palmeiras vs. Corinthians
 <span class="t">01:30</span></a>
 <ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPXByZW1pZXJlMQ==" target="_blank">Premiere 1 BR<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899f8a847a85959e8e98858b7e.html" target="_blank">Premiere 1 BR<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1447,18 +1453,20 @@ Copa do Brasil: Palmeiras vs. Corinthians
 Copa do Brasil: Fluminense vs. Internacional
 <span class="t">01:30</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Premiere 2 BR<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a1899f8a847a85959e8d98858b7d.html" target="_blank">Premiere 2 BR<span>Calidad 720p</span></a></li>
 </ul>
 </li>
+
 
 <li class="LC"><a href="#">
 Leagues Cup: América vs. Portland Timbers
 <span class="t">02:30</span></a>
 <ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWV2ZW50b3Mx" target="_blank">TUDN MX<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9lbGNhbmFsZGVwb3J0aXZvLmNvbS9tbHNwYXNzNC5waHA=" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="" target="_blank">TUDN MX<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="" target="_blank">MLS Pass<span>Calidad 720p</span></a></li>
 </ul>
 </li>
+
 
 <li class="LC"><a href="#">
 Leagues Cup: Real Salt Lake vs. Querétaro
