--- a/index.html
+++ b/index.html
@@ -1299,7 +1299,7 @@ MLB: Athletics vs Washington Nationals
 UEFA Europa League : Fredrikstad vs Midtjylland
 <span class="t">17:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://topembed.pw/channel/ex8368571" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
@@ -1504,6 +1504,15 @@ Primera División: San Lorenzo vs Vélez Sarsfield
 </li>
 
 
+<li class="TE"><a href="#">
+WTA National Bank Open 2025: Victoria Mboko (CAN) vs. Naomi Osaka (JPN) | Final
+<span class="t">23:00</span></a>
+<ul>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espnmx" target="_blank">ESPN 1 MX<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTQ=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
 
 
 <li class="COL"><a href="#">
@@ -1555,6 +1564,15 @@ Copa de Brasil: Vasco da Gama vs CSA
 </li>
 
 
+<li class="TE"><a href="#">
+ATP Cincinnati Open 2025: Primera Ronda
+<span class="t">00:00</span></a>
+<ul>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espn2" target="_blank">ESPN 2 CO<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espn3" target="_blank">ESPN 3 AR<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
 <li class="LC"><a href="#">
 Leagues Cup : Monterrey vs Charlotte
 <span class="t">24:30</span></a>
@@ -1574,6 +1592,15 @@ Leagues Cup : NY Red Bulls vs Juárez
 </ul>
 </li>
 
+
+<li class="TE"><a href="#">
+ATP National Bank Open 2025: Karen Khachanov (RUS) vs. Ben Shelton (USA) | Final
+<span class="t">00:30</span></a>
+<ul>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espn" target="_blank">ESPN 1 CO<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espn2" target="_blank">ESPN 2 AR<span>Calidad 720p</span></a></li>
+</ul>
+</li>
 
 
 
