--- a/index.html
+++ b/index.html
@@ -1342,7 +1342,9 @@ UEFA Europa League: AEK Larnaca vs Legia Warszawa
 Amistoso de clubes: Bayern München vs Tottenham Hotspur
 <span class="t">17:30</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL1" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL2" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
