--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@ Amistoso de clubes: Bayern München vs Tottenham Hotspur
 Liga de Conferencias de la UEFA: AIK vs Gytamen ETO
 <span class="t">18:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL7" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
@@ -1364,7 +1364,7 @@ Liga de Conferencias de la UEFA: AIK vs Gytamen ETO
 Liga de Conferencias de la UEFA: Viking vs stanbul Başakşehir
 <span class="t">18:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL6" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
@@ -1374,7 +1374,7 @@ Liga de Conferencias de la UEFA: Viking vs stanbul Başakşehir
 UEFA Europa League : PAOK vs Wolfsberger AC
 <span class="t">18:30</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL5" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
