--- a/index.html
+++ b/index.html
@@ -1385,7 +1385,7 @@ UEFA Europa League : PAOK vs Wolfsberger AC
 Amistoso interclubes: Cádiz vs Al Ettifaq
 <span class="t">19:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL6" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
@@ -1394,7 +1394,7 @@ Amistoso interclubes: Cádiz vs Al Ettifaq
 UEFA Europa League: Zrinjski vs Breidablik
 <span class="t">19:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL7" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
@@ -1404,7 +1404,7 @@ UEFA Europa League: Zrinjski vs Breidablik
 UEFA Europa League: Panathinaikos vs Shakhtar Donetsk
 <span class="t">19:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL8" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
@@ -1415,7 +1415,7 @@ UEFA Europa League: Panathinaikos vs Shakhtar Donetsk
 UEFA Europa League: Servette vs Utrecht
 <span class="t">19:30</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL9" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
